--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fontsource-variable/sora": "^5.2.8",
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "motion": "^12.23.26",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
