--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "clsx": "^2.1.1",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
+    "mathjs": "^14.9.1",
     "motion": "^12.23.26",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-responsive": "^10.0.1",
+    "react-router-dom": "^7.11.0",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
